--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "docs:preview": "vitepress preview docs"
   },
   "devDependencies": {
-    "vitepress": "^1.0.0-alpha.33",
-    "markdown-it-mathjax3": "^4.3.2"
+    "markdown-it-image-figures": "^2.1.0",
+    "markdown-it-mathjax3": "^4.3.2",
+    "vitepress": "^1.0.0-alpha.33"
   }
 }
