Added Angola DocSearch functionality.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "devDependencies": {
     "markdown-it-image-figures": "^2.1.0",
     "markdown-it-mathjax3": "^4.3.2",
-    "vitepress": "^1.0.0-alpha.43"
+    "vitepress": "^1.0.0-alpha.45",
+    "yarn-audit-fix": "^9.3.8"
+  },
+  "dependencies": {
+    "@docsearch/js": "3"
   }
 }
