--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   },
   "devDependencies": {
     "markdown-it": "*",
-    "markdown-it-image-figures": "^2.1.0",
+    "markdown-it-image-figures": "^2.1.1",
     "markdown-it-mathjax3": "^4.3.2",
     "markdown-it-table-captions": "^1.0.4",
-    "vitepress": "^1.0.0-rc.31",
-    "yarn-audit-fix": "^9.3.8"
+    "vitepress": "^1.3.0",
+    "yarn-audit-fix": "^10.0.7"
   },
   "dependencies": {
     "@docsearch/js": "3"
