--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "markdown-it-image-figures": "^2.1.1",
     "markdown-it-mathjax3": "^4.3.2",
     "markdown-it-table-captions": "^1.0.4",
-    "vitepress": "^1.3.0",
+    "vitepress": "^2.0.0-alpha.15",
     "yarn-audit-fix": "^10.0.7"
   },
   "dependencies": {
-    "@docsearch/js": "3"
+    "@docsearch/js": "3",
+    "markdown-it-attrs": "^4.3.1"
   },
   "packageManager": "yarn@1.22.19"
 }
