--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
   "devDependencies": {
     "markdown-it": "*",
     "markdown-it-image-figures": "^2.1.1",
-    "markdown-it-mathjax3": "^4.3.2",
+    "markdown-it-mathjax3": "^4",
     "markdown-it-table-captions": "^1.0.4",
+    "markdown-it-attrs": "^4.3.1",
     "vitepress": "^2.0.0-alpha.15",
     "yarn-audit-fix": "^10.0.7"
   },
   "dependencies": {
-    "@docsearch/js": "3",
-    "markdown-it-attrs": "^4.3.1"
+    "@docsearch/js": "^4"
   },
   "packageManager": "yarn@1.22.19"
 }
